--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!-- Tells browser to load this file as an html file -->
+<!doctype html> 
+<html>
+<head>
+  <meta charset="utf-8">
+  <title> Online Portfolio </title>
+</head>
+<body>
+Projects shown below
+</body>
+</html>
+
