--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title> Online Portfolio </title>
 </head>
-<body style+"background-color:blue;">
+<body style="background-color:blue;">
 Projects shown below
 </body>
 </html>
